# multi-cloud-sre-agent

./: .env.example  .gitignore  ARCHITECTURE_DEFENSE.md  KNOWN_DEFECTS.md  KNOWN_ISSUES.md  QUICKSTART.md  README.md  architecture.md  config.py  debug_code_gen.py  demo_e2e_showcase.py  demo_showcase.py  llm_utils.py  main.py  orchestrator.py  pyproject.toml  pytest.ini  rag_system.py  run.bat  run.sh  run_all_tests.py  task_executor.py  test_health.py  test_system.py  wasm_sandbox.py
agents/: __init__.py  base_agent.py  code_generator_agent.py  data_adapter_agent.py  manager_agent.py  spec_doc_agent.py  task_planner_agent.py
demo/: simple_demo.py
docs/: TODO.md  data_adapter_agent.md
examples/: enhanced_rag_demo.py
reports/: .gitkeep
schemas/: __init__.py  health_schema.py  metric_schema.py  resource_schema.py
services/: __init__.py  circuit_breaker.py  code_quality.py  code_reviewer.py  code_sandbox.py  code_security.py  code_templates.py  context_compressor.py  conversation_manager.py  doc_cache.py  enhanced_rag.py  permission_manager.py  prompt_injection_defense.py  tag_mapping_service.py  test_generator.py  tool_registry.py
tests/: README.md  conftest.py  test_agents.py  test_all_platforms.py  test_aws_real_connection.py  test_azure_gcp_adapter.py  test_circuit_breaker.py  test_code_generator_react.py  test_code_generator_react_enhanced.py  test_code_generator_react_unit.py  test_code_quality_integration.py  test_conversation_manager.py  test_cpu_threshold_query.py  test_credentials.py  test_data_adapter_agent.py  test_data_adapter_parametrized.py  (+15 more)
(+9 files in other folders)
